--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ nibabel==2.4.1
 nilearn==0.5.0    
 numpy==1.16.4   
 pandas==0.25.0   
-Pillow==6.1.0    
+pillow>=6.2.0
 pip==19.1.1   
 pycparser==2.19     
 pyparsing==2.4.0    
